# shrinkplz

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  current-input  main.py  my-prog.py  pyproject.toml
example/: README.md  my-prog.py  my-test-script
shrinkplz/: __init__.py  cli.py  config.py  mark.py  output.py  state.py
tests/: tests.py
