[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shrinkplz"
version = "0.1.1"
description = "A command line tool to help you shrink failing test data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = "MIT"

[project.scripts]
shrinkplz = "shrinkplz.cli:main"
