[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shrinkplz"
version = "0.1.2"
description = "A command line tool to help you shrink failing test data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.1",
]
license = "MIT"

classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Testing"
]

[project.urls]
Homepage = "https://github.com/rtpg/shrinkplz"
Repository = "https://github.com/rtpg/shrinkplz.git"
Issues = "https://github.com/rtpg/shrinkplz/issues"

[project.scripts]
shrinkplz = "shrinkplz.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
